--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <% include header.html %>
 	<a href="/login">登录</a>
 	<a href="/upload">上传</a>
+	<div class="font-demo flaticon-airplane49"></div>
 </body>
 </html>
