--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 	<div class="mod-content">
 		<form autocomplete="off" method="POST" class="form-wrapper">
 			<div class="img-div">
-				<div class="user-img"><img src="http://ww1.sinaimg.cn/crop.0.0.1080.1080.1024/873735dfjw8es163x2ipjj20u00u0aan.jpg"></div>
+				<div class="user-img"><img src="./uploads/a.jpeg"></div>
 			</div>
 			<p class="form-item form-input-wrapper form-item-username form-input-mobile">
 				<input type="text" name="username" class="text-input" maxlength="60" placeholder="手机号/邮箱/用户名" value="" id="login-username">
