--- a/views/header.html
+++ b/views/header.html
@@ -5,9 +5,14 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=240, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="format-detection" content="telephone=no, email=no">
-	<link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel="stylesheet" href="./stylesheets/flaticon.css" />
+	<link rel='stylesheet' href='./stylesheets/style.css' />
 </head>
 <body>
 	<header class="pass-header">
 		<span class="pass-header-title"><%= title %></span>
+		<div id="userinfo-wraps">
+			<div class="glyph-icon flaticon-avatar">
+			</div>
+		</div>
 	</header>
