--- a/views/header.html
+++ b/views/header.html
@@ -3,7 +3,7 @@
 <head>
 	<title><%= title %></title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="viewport" content="width=240, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<meta name="format-detection" content="telephone=no, email=no">
 	<link rel="stylesheet" href="./stylesheets/flaticon.css" />
 	<link rel='stylesheet' href='./stylesheets/style.css' />
@@ -12,7 +12,7 @@
 	<header class="pass-header">
 		<span class="pass-header-title"><%= title %></span>
 		<div id="userinfo-wraps">
-			<div class="glyph-icon flaticon-avatar">
+			<div class="glyph-icon flaticon-settings-1">
 			</div>
 		</div>
 	</header>
