--- a/views/test.html
+++ b/views/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Slideout Demo</title>
+    <title>我的应用</title>
     <meta http-equiv="cleartype" content="on">
     <meta name="MobileOptimized" content="320">
     <meta name="HandheldFriendly" content="True">
@@ -15,8 +15,12 @@
   <body>
 
     <nav id="menu">
-      <div class="img-div">
-        <div class="user-img"><img src="./uploads/a.jpeg"></div>
+      <div>
+        <div class="img-div">
+          <div class="user-img"><img src="./uploads/a.jpeg"></div>
+          <span class="user-name">刘五一</span>
+          <div>Home</div>
+        </div>
       </div>
     </nav>
 
