--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,7 +72,7 @@ a:active {
 .img-div {
     width: 100%;
     height: 80px;
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 15px
 }
 
@@ -108,6 +108,15 @@ a:active {
     left: 1px;
     position: relative;
     border-radius: 20px
+}
+
+.user-name{
+    color: #f1f2f2;
+    text-align: center;
+    float: left;
+    width: 100%;
+    padding: 20px 0;
+    font-size: 20px;
 }
 
 #userinfo-wraps {
